# VisGrid3D

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  VisGrid3D.cpp  __init__.py  colormap.h  colors.csv  datareader.cpp  datareader.h  visualizer.cpp  visualizer.h  visualizer.py
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
src/: VisGrid3D.cpp  colormap.csv  colormap.h  colortable.h  datareader.cpp  datareader.h  visualizer.cpp  visualizer.h
